squash bugs on the frontend and backend

--- a/css/main.css
+++ b/css/main.css
@@ -57,3 +57,14 @@
 .login_links{
 	color: red;
 }
+
+#ajaxloader {
+    position: absolute;
+    top: 6%;
+    right: 50%;
+}
+
+.blurout {
+    opacity: 0.8;
+    background-color: grey;
+}
